<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:id="@+id/nav_movie_main"
   app:startDestination="@id/home_fragment">

   <fragment
      android:id="@+id/home_fragment"
      android:name="com.syalim.themoviedb.presentation.main.home.HomeFragment"
      android:label="@string/home" />
   <fragment
      android:id="@+id/discover_fragment"
      android:name="com.syalim.themoviedb.presentation.main.discover.DiscoverFragment"
      android:label="@string/discover" />
   <fragment
      android:id="@+id/bookmarks_fragment"
      android:name="com.syalim.themoviedb.presentation.main.bookmarks.BookmarksFragment"
      android:label="@string/bookmarks" />
</navigation>