<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:id="@+id/container"
   android:layout_width="match_parent"
   android:layout_height="match_parent">

   <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/top_appbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/transparent"
      app:elevation="0dp">

      <com.google.android.material.appbar.CollapsingToolbarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:collapsedTitleTextAppearance="@style/TheMovieDb.TextAppearance.ToolbarTitle.Collapsed"
         app:contentScrim="@color/brand_dark"
         app:expandedTitleTextAppearance="@style/TheMovieDb.TextAppearance.ToolbarTitle.Expanded"
         app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
         app:scrimAnimationDuration="@integer/duration_regular"
         app:scrimVisibleHeightTrigger="60dp"
         app:titleCollapseMode="fade">

         <RelativeLayout
            android:id="@+id/view_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_collapseMode="parallax">

            <ImageView
               android:id="@+id/iv_background"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:adjustViewBounds="true"
               android:alpha="0.4"
               android:contentDescription="@string/app_name"
               android:scaleType="centerCrop" />

            <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/bg_fading_bottom"
               android:paddingHorizontal="@dimen/space_regular"
               android:paddingTop="@dimen/space_actionBar"
               android:paddingBottom="@dimen/space_regular">

               <LinearLayout
                  android:id="@+id/view_title"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:paddingHorizontal="@dimen/space_regular"
                  app:layout_constraintEnd_toStartOf="@id/view_vote"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent">

                  <TextView
                     android:id="@+id/tv_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLines="2"
                     android:textSize="@dimen/text_large"
                     android:textStyle="bold" />

                  <TextView
                     android:id="@+id/tv_release_genre_duration"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
               </LinearLayout>

               <RelativeLayout
                  android:id="@+id/view_vote"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent">

                  <ProgressBar
                     android:id="@+id/progress_bar_vote_average"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:indeterminateOnly="false"
                     android:progressDrawable="@drawable/circular_vote_bar_color" />

                  <TextView
                     android:id="@+id/tv_vote_average"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:textSize="@dimen/text_large"
                     android:textStyle="bold" />
               </RelativeLayout>

               <androidx.constraintlayout.widget.ConstraintLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/space_large"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/view_title">

                  <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/iv_poster"
                     android:layout_width="160dp"
                     android:layout_height="0dp"
                     android:scaleType="centerCrop"
                     app:layout_constraintDimensionRatio="2:3"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:shapeAppearanceOverlay="@style/TheMovieDb.ShapeAppearanceOverlay.Corner6dp" />

                  <TextView
                     android:id="@+id/tv_tagline"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/space_regular"
                     android:textStyle="italic"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/iv_poster"
                     app:layout_constraintTop_toTopOf="parent" />

                  <TextView
                     android:id="@+id/tv_desc"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/space_regular"
                     android:layout_marginTop="@dimen/space_regular"
                     android:ellipsize="end"
                     android:maxLines="16"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/iv_poster"
                     app:layout_constraintTop_toBottomOf="@id/tv_tagline" />

               </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
         </RelativeLayout>

         <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <include layout="@layout/shimmer_ph_movie_detail" />

         </com.facebook.shimmer.ShimmerFrameLayout>

         <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetEnd="@dimen/space_large"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_collapseMode="pin"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="@color/brand_white" />

      </com.google.android.material.appbar.CollapsingToolbarLayout>
   </com.google.android.material.appbar.AppBarLayout>

   <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
      android:id="@+id/fab_trailer"
      style="@style/TheMovieDb.Style.ExtendedFloatingActionButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/space_regular"
      android:text="@string/show_trailer"
      android:translationY="30dp"
      android:visibility="gone"
      app:collapsedSize="0dp"
      app:icon="@drawable/ic_play_trailer"
      app:layout_anchor="@id/top_appbar"
      app:layout_anchorGravity="start|bottom" />

   <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
      android:id="@+id/fab_bookmark"
      style="@style/TheMovieDb.Style.ExtendedFloatingActionButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/space_regular"
      android:text="@string/bookmark"
      android:translationY="@dimen/space_huge"
      app:icon="@drawable/ic_bookmark_default"
      app:layout_anchor="@id/top_appbar"
      app:layout_anchorGravity="end|bottom" />

   <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@id/top_bar"
      android:clipToPadding="false"
      android:paddingTop="60dp"
      android:paddingBottom="@dimen/space_huge"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">

         <!-- region WebView Youtube -->
         <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_trailer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/space_large"
            android:paddingHorizontal="@dimen/space_regular"
            android:visibility="gone">

            <TextView
               android:id="@+id/tv_info_trailer"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/space_large"
               android:visibility="gone"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

            <WebView
               android:id="@+id/web_view_youtube"
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layerType="hardware"
               android:scrollbars="none"
               android:visibility="gone"
               app:layout_constraintDimensionRatio="16:9"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
               android:id="@+id/web_view_progress"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:indeterminate="true"
               android:visibility="gone"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:trackThickness="2dp" />

         </androidx.constraintlayout.widget.ConstraintLayout>
         <!-- endregion -->

         <!-- region Recommendations -->
         <LinearLayout
            android:id="@+id/view_recommendation_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_large"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="@dimen/space_regular"
               android:text="@string/recommendations"
               android:textColor="@color/brand_white"
               android:textSize="@dimen/text_large"
               android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/rv_recommendation_movies"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:clipToPadding="false"
               android:nestedScrollingEnabled="false"
               android:padding="@dimen/space_tiny" />
         </LinearLayout>
         <!-- endregion -->

         <!-- region Reviews -->
         <LinearLayout
            android:id="@+id/view_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="12dp"
               android:text="@string/reviews"
               android:textColor="@color/brand_white"
               android:textSize="@dimen/text_large"
               android:textStyle="bold" />

            <TextView
               android:id="@+id/tv_info_reviews"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="@dimen/space_large"
               android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/rv_reviews"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:nestedScrollingEnabled="false"
               android:paddingHorizontal="@dimen/space_regular"
               app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

         </LinearLayout>
         <!-- endregion -->

      </LinearLayout>

   </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>